Unified SnowflakeProxyConfig handles both proxy and direct JDBC